--- a/Tutorials/T1/TutorialEngine/Engine/Engine.vcxproj
+++ b/Tutorials/T1/TutorialEngine/Engine/Engine.vcxproj
@@ -168,6 +168,7 @@
     <ClInclude Include="Source\Core\Application.h" />
     <ClInclude Include="Source\Core\Core.h" />
     <ClInclude Include="Source\Core\CoreMinimal.h" />
+    <ClInclude Include="Source\Core\EntryPoint.h" />
     <ClInclude Include="Source\Core\Platform.h" />
     <ClInclude Include="Source\Core\Windows\WindowsApplication.h" />
     <ClInclude Include="Source\Core\Windows\WindowsPlatform.h" />
